[UI-3] Fixing background overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,5 +2,3 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body{min-height:100%;}
-body{height:100vh;}
